Add first version of signed HTTP requests authorization
